# starter-template-DNA-app

./: .dna-current-session.json  .dna-git-config.json  .dna-sessions.json  .env.example  .eslintrc.json  .gitignore  .hot-reload-state.json  .prettierignore  .prettierrc  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION-SUMMARY.md  LAUNCH_TRACKING.md  MERGE_PLAN.md  README-PUBLIC.md  README.md  claude-code-sdk-integration-vision.md  comprehensive-testing-framework.md  jest.config.js  jest.preset.js  jest.setup.js  manual-session-tracking.json  nx.json  package-lock.json  package.json  progress-session-epic-6-story-3-ac4.md  progress-session.md  progress-tracking.md  starter-template-dna-architecture.md  starter-template-dna-frontend-architecture.md  starter-template-dna-prd.md  starter-template-dna-project-brief.md  tsconfig.base.json
.github/: SOCIAL_PREVIEW.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sync-public-repo.yml
apps/cli-tool/: ENHANCED_CLI_FEATURES.md  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json
bmad-core/agent-teams/: team-all.yml
bmad-core/agents/: analyst.yml  dev.yml  pm.yml  po.yml  qa.yml  sm.yml
bmad-core/checklists/: architect-checklist.md  change-checklist.md  pm-checklist.md  po-master-checklist.md  story-dod-checklist.md  story-draft-checklist.md
bmad-core/data/: bmad-kb.md
bmad-core/ide-agents/: analyst.ide.md  architect.ide.md  bmad.ide.md  dev.ide.md  pm.ide.md  po.ide.md  qa.ide.md  sm.ide.md  ux.ide.md
bmad-core/personas/: analyst.md  architect.md  bmad.md  dev.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
bmad-core/schemas/: README.md  agent-schema.yml  agent-team-schema.yml  ide-agent-schema.yml  persona-schema.yml
bmad-core/tasks/: advanced-elicitation.md  brainstorming-techniques.md  brownfield-create-story.md  core-dump.md  correct-course.md  create-agent.md  create-deep-research-prompt.md  create-doc-from-template.md  create-expansion-pack.md  create-ide-agent.md  create-next-story.md  create-team.md  execute-checklist.md  generate-ai-frontend-prompt.md  index-docs.md  shard-doc.md
bmad-core/templates/: architecture-tmpl.md  brownfield-architecture-tmpl.md  brownfield-prd-tmpl.md  competitor-analysis-tmpl.md  expansion-pack-plan-tmpl.md  front-end-architecture-tmpl.md  front-end-spec-tmpl.md  fullstack-architecture-tmpl.md  market-research-tmpl.md  prd-tmpl.md  project-brief-tmpl.md  story-tmpl.md  web-agent-startup-instructions-template.md
bmad-core/utils/: agent-switcher.ide.md  template-format.md  workflow-management.md
bmad-core/workflows/: brownfield-fullstack.yml  brownfield-service.yml  brownfield-ui.yml  greenfield-fullstack.yml  greenfield-service.yml  greenfield-ui.yml
docs/: ai-saas-ui-spec.md  api-reference.md  collaboration-ui-spec.md  data-models.md  design-system-spec.md  epic-1.md  epic-2.md  epic-3.md  epic-4.md  epic-5-story-1-dna-engine-foundation.md  epic-5.md  epic-6.md  front-end-api-interaction.md  front-end-component-guide.md  front-end-project-structure.md  front-end-state-management.md  front-end-testing-strategy.md  index.md  mcp-integration.md  operational-guidelines.md  project-structure.md  tech-stack.md
libs/core/: jest.config.ts  project.json
libs/design-system/: README.md  package.json
libs/quality-framework/: README.md
libs/testing/: README.md  jest.config.ts  project.json  tsconfig.lib.json  tsconfig.spec.json
mcp-server/: README.md  dna-cli-mcp-server.ts  install.sh  package.json  test-local.js  tsconfig.json
scripts/: git-auto-commit.js  git-automation.sh  setup-dev-env.sh  verify-installation.sh
stories/: epic-1-story-1.md  epic-1-story-2.md  epic-1-story-3.md  epic-1-story-3a.md  epic-1-story-3b.md  epic-1-story-4.md  epic-1-story-5.md
stories/epic-2/: epic-2-story-1.md  epic-2-story-2.md  epic-2-story-3.md  epic-2-story-4.md  epic-2-story-5.md  epic-2-story-6.md  epic-2-story-7.md
stories/epic-3/: epic-3-story-1.md  epic-3-story-2.md  epic-3-story-3.md  epic-3-story-4.md  epic-3-story-5.md  epic-3-story-6.md
stories/epic-4/: epic-4-story-1.md  epic-4-story-2.md  epic-4-story-3.md  epic-4-story-4.md  epic-4-story-5.md  epic-4-story-6.md  epic-4-story-7.md
stories/epic-5/: epic-5-story-1.md  epic-5-story-2.md  epic-5-story-3.md  epic-5-story-4.md  epic-5-story-5.md  epic-5-story-6.md  epic-5-story-7.md  epic-5-story-8.md
stories/epic-6/: epic-6-story-1.md  epic-6-story-2.md  epic-6-story-3.md  epic-6-story-4.md  epic-6-story-5.md  epic-6-story-6.md  epic-6-story-7.md
temp-cli-package/package/: LICENSE  README.md  package.json
temp-cli-package/package/templates/cross-platform/tauri-native/src-tauri/: Cargo.toml  tauri.conf.json
temp-cli-package/package/templates/performance/data-visualization/src-tauri/: Cargo.toml  tauri.conf.json
temp-cli-package/package/templates/performance/data-visualization/src-tauri/src/: data_processing.rs
temp-js-output/: main.js
temp-js-output/commands/: create.js  list.js  update.js  validate.js
temp-js-output/environments/: environment.js
temp-js-output/lib/: progress-tracker.js  project-generator.js  template-registry.js  template-selector.js
temp-js-output/types/: cli.js
temp-js-output/utils/: error-handler.js  logger.js
templates/ai-mobile-flutter/: README.md  analysis_options.yaml  pubspec.yaml
templates/ai-mobile-react-native/: README.md  babel.config.js  index.js  jest.config.js  metro.config.js
templates/performance/high-performance-apis/: Cargo.toml  README.md  docker-compose.yml  package.json  template.json
templates/performance/high-performance-apis/k8s/: deployment.yaml
templates/performance/high-performance-apis/src/: database.rs  main.rs  metrics.rs  rate_limiting.rs
templates/performance/real-time-collaboration/: Cargo.toml  template.json
templates/performance/real-time-collaboration/src/: App.tsx  main.rs  operational_transform.rs  performance.rs  presence.rs  webrtc.rs
templates/performance/real-time-collaboration/src/stores/: collaborationStore.ts
templates/performance/real-time-collaboration/src/types/: index.ts
(+683 files in other folders)
