[package]
name = "tauri-native-platform"
version = "1.0.0"
description = "Performance-focused Tauri 2.0 desktop application with native APIs"
authors = ["Starter Template DNA"]
license = "MIT"
repository = "https://github.com/starter-template-dna/tauri-native"
default-run = "tauri-native-platform"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = ["isolation"] }

[dependencies]
tauri = { version = "2.0", features = [
    "macos-private-api",
    "isolation",
    "protocol-asset",
    "window-all",
    "system-tray",
    "updater"
] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
sysinfo = "0.30"
dirs = "5.0"
notify = "6.1"
checksum = "0.2"

# Security dependencies
argon2 = "0.5"
ring = "0.17"

# Performance monitoring
flame = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

[profile.dev]
opt-level = 1