[package]
name = "{{projectName}}-dataviz"
version = "1.0.0"
description = "High-performance data visualization platform"
authors = ["{{authorName}} <{{authorEmail}}>"]
license = "MIT"
repository = "https://github.com/{{githubUsername}}/{{projectName}}"
edition = "2021"

# Performance optimizations for data processing
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "1.5", features = ["isolation"] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
parking_lot = "0.12"
rayon = "1.7"
csv = "1.2"
polars = { version = "0.35", features = ["lazy", "csv-file", "json", "parquet", "streaming"] }

# Native file system access
[dependencies.tauri-plugin-fs-extra]
version = "1.0"
features = ["all"]

# Performance monitoring
[dependencies.tauri-plugin-performance-monitor]
version = "1.0"
optional = true

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
performance-monitor = ["tauri-plugin-performance-monitor"]

[[bin]]
name = "{{projectName}}-dataviz"
path = "src/main.rs"